# OpenGLTemplate

./: CMakeLists.txt  Doxyfile  build.sh  main.cpp
src/: Application.cpp  Application.hpp  Unzipper.cpp  Unzipper.hpp  main.cpp
src/assets/shaders/: basicF.glsl  basicV.glsl  borderedF.glsl  textF.glsl
src/inputHelpers/: InputHelper.cpp  InputHelper.hpp  Types.hpp
src/meshHelpers/: CMakeLists.txt  MeshBuilder.cpp  MeshBuilder.hpp  MeshStyle.hpp  RectMesh.cpp  RectMesh.hpp
src/renderHelpers/: RenderHelper.cpp  RenderHelper.hpp
src/shaderHelpers/: ShaderHelper.cpp  ShaderHelper.hpp  UniformKeeper.hpp
src/stateHelpers/: WindowState.hpp
src/textHelpers/: TextHelper.cpp  TextHelper.hpp  Types.hpp
src/textureHelpers/: TextureHelper.cpp  TextureHelper.hpp
src/treeHelpers/: CMakeLists.txt  ConcreteNode.cpp  ConcreteNode.hpp  FastTreeSort.cpp  FastTreeSort.hpp  RectNodeABC.cpp  RectNodeABC.hpp  TextNode.cpp  TextNode.hpp  TreeStruct.cpp  TreeStruct.hpp  Types.hpp
src/utils/: CommonUtils.cpp  CommonUtils.hpp
